Add memory management args